--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
-/*
- * Estilos de tu proyecto
- */
+nav img{ /*Logo laboratoria*/
+
+	height: 80px;
+	width: 150;
+	margin-left: 550px;
+}
+
+.correo{
+font-family: 'Doppio One', sans-serif;
+font-size: 15px;
+display: inline-block;
+vertical-align: middle;
+
+
+}
