--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body{
+	
 	margin: 0px auto;
 }
 
@@ -12,9 +13,10 @@ nav img{ /*Logo laboratoria*/
 }
 
 .correo{
-  font-family: 'Doppio One', sans-serif;
-  display: inline-block;
-  float: right;
+
+  	font-family: 'Doppio One', sans-serif;
+  	display: inline-block;
+  	float: right;
 	margin-top: 20px;
 	margin-right: 20px;
 	color: #e1e1e1;
@@ -31,25 +33,79 @@ nav button{
 
 nav button i{
 	font-size: 15px;
-  display: inline-block;
-  float: right;
-  margin-right: 20px;
+    display: inline-block;
+    float: right;
+    margin-right: 20px;
 
 }
 
 #lateral_bar{
 
- 	display: inline-block;
+ 	
 	background-color: #e1e1e1;
-	height: 1000px;
-  width: 200px;
-
+	height: auto;
+    width: 200px;
+	position: relative;
 }
 
 
 #firts_info {
-  display: inline-block;
-  vertical-align: top;
+  	display: inline-block;
+ 	border: 2px solid red;
+  	width: 1000px;
+  	position: relative;
+  	bottom: 710px;
+  	left: 250px;
+}
+
+.graphic1{
+	display: inline-block;
 	border: 2px solid red;
-	width: 1064px;
+	width: 300px;
+	margin-left: 10px;
+
+}
+
+.graphic2{
+
+	display: inline-block;
+	border: 2px solid red;
+	width: 300px;
+	margin-left: 10px;
+	left: 600px;
+
+
+}
+
+.graphic3{
+
+	display: inline-block;
+	border: 2px solid red;
+	width: 300px;
+	margin-left: 10px;
+
+
+}
+
+#second_info{
+	
+  	border: 2px solid blue;
+  	width: 1000px;
+  	height: auto;
+  	position:relative;
+	left: 250px;
+	bottom: 600px;
+	
+}
+
+.notes{
+
+	display: inline-block;
+	width: 500px;
+	height: auto;
+}
+
+.tec{
+
+	display: inline-block;
 }
