--- a/css/main.css
+++ b/css/main.css
@@ -85,12 +85,22 @@ li .fa-sort-desc{
 	margin-top: 0;
 }
 
+.box5 *{
+	width: auto;
+	display: inline-block;
+}
+
+.box5 h2{
+	margin-left: 30px;
+}
+
 .box5 button{
 	width: 15px;
 	height: 15px;
 	padding: 0px;
 	background-color: transparent;
 	border: transparent;
+	margin-left: 5px;
 }
 
 .box5 .fa-sort-desc{
