--- a/css/main.css
+++ b/css/main.css
@@ -88,9 +88,18 @@ li * {
 	display: inline-block;
 }
 
-li p{
+li:hover{
+	background-color: #BDBDBD;
+	margin-right: 10px;
+	border-radius: 5%;
+}
+
+li a{
  	margin-left: 5px;
  	width: auto;
+	text-decoration: none;
+	color: Black;
+	margin-top: 17px;
 }
 
 li input{
@@ -240,6 +249,13 @@ footer{
 	height: 60px;
 }
 
+.box5:hover{
+	background-color: #BDBDBD;
+	margin-right: 10px;
+	margin-left: 10px;
+	border-radius: 5%;
+}
+
 #opcs-menu{
 	width: 10%;
 	margin-left: 12%;
@@ -292,6 +308,11 @@ select{
   	border: none;
 	font-weight: bolder;
 	font-size: 17px;
+}
+
+select:hover{
+	background-color: #BDBDBD;
+	border-radius: 5%;
 }
 
 option{
